Addresses a number of CVE's
 [ASM-2363] feat: address flagged CVE's
 
   feat: apply reformat code according to Companies House style
   feat: update to use the new chs bom's