@@ -51,7 +51,8 @@ class EshuMapperTest {
         when(paymentResponse.getCompanyNumber()).thenReturn(companyNumber);
     }
 
-    private void assertEshuDao(EshuDao eshu, String paymentId, int productCode, String companyNumber, Instant transactionDate) {
+    private void assertEshuDao(EshuDao eshu, String paymentId, int productCode, String companyNumber,
+            Instant transactionDate) {
         assertEquals("X" + paymentId, eshu.getPaymentReference());
         assertEquals(productCode, eshu.getProductCode());
         assertEquals(companyNumber, eshu.getCompanyNumber());
@@ -76,7 +77,7 @@ class EshuMapperTest {
         List<EshuDao> result = eshuMapper.mapFromPaymentResponse(paymentResponse, paymentId, transactionDate);
 
         assertEquals(1, result.size());
-        assertEshuDao(result.get(0), paymentId, 100, "12345678", transactionDate);
+        assertEshuDao(result.getFirst(), paymentId, 100, "12345678", transactionDate);
     }
 
 
@@ -96,7 +97,7 @@ class EshuMapperTest {
         List<EshuDao> result = eshuMapper.mapFromPaymentResponse(paymentResponse, paymentId, transactionDate);
 
         assertEquals(1, result.size());
-        assertEshuDao(result.get(0), paymentId, 100, "", transactionDate);
+        assertEshuDao(result.getFirst(), paymentId, 100, "", transactionDate);
     }
 
 
